--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,15 @@
 }
 
 body {
+  position: relative;
+
   min-width: 900px;
 
   color: #ffffff;
-  background-color: #d0d3d9;
+  background-color: #171c2a;
+  background-image: url("../img/bg__header--gradient.jpg");
+  background-positon: top center;
+  background-size: 100% 100%;
 
   font-family: "Lato Regular", "Arial", sans-serif;
   font-size: 22px;
@@ -229,6 +234,7 @@ a {
 
 .container__inner-wrapper--header {
   position: absolute;
+  top: 0;
 
   padding-top: 50px;
 }
@@ -275,7 +281,7 @@ a {
 
 .navigation__btn::after {
   position: relative;
-  z-index: 2;
+  z-index: 3;
 
   display: inline-block;
 
@@ -541,7 +547,7 @@ main {
   position: relative;
 }
 
-label[for="spoiler"] {
+label[for="second-screen"] {
   position: absolute;
   z-index: 1;
   bottom: -66px;
@@ -559,11 +565,11 @@ label[for="spoiler"] {
   background-size: 100% 100%;
 }
 
-.spoiler {
+.second-screen {
 
 }
 
-.spoiler__text {
+.second-screen__text {
   width: 54.54%;
   margin-bottom: 30px;
 
@@ -575,7 +581,7 @@ label[for="spoiler"] {
   line-height: 30px;
 }
 
-.spoiler__text--title {
+.second-screen__text--title {
   margin-bottom: 11px;
 
   color: #f48647;
@@ -586,11 +592,11 @@ label[for="spoiler"] {
   line-height: 44px;
 }
 
-.spoiler__text--feature {
+.second-screen__text--feature {
   color: #f48647;
 }
 
-.spoiler__text--conclusion {
+.second-screen__text--conclusion {
   margin-top: 62px;
   margin-bottom: 0;
 
@@ -610,6 +616,8 @@ label[for="spoiler"] {
 
 .content--my-experience {
   padding-top: 27px;
+
+  background-color: #d0d3d9;
 }
 
 .content__title {
@@ -1235,4 +1243,62 @@ label[for="spoiler"] {
   font-size: 14px;
   font-weight: 700;
   line-height: 18px;
+}
+
+.js__wrapper--fixed-hat {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+
+  background-color: #1a2232;
+}
+
+.first-screen--fixed-hat {
+  min-width: 900px;
+  max-width: 1200px;
+
+  padding: 15px 0;
+  margin: 0 auto;
+}
+
+.first-screen--fixed-hat > * {
+  display: none;
+}
+
+.logo--fixed-hat {
+  display: block;
+  width: 95px;
+  height: 50px;
+
+  margin-left: 4.166%;
+}
+
+.logo--fixed-hat img {
+  width: 100%;
+  height: 100%;
+}
+
+.navigation--fixed-hat {
+  position: absolute;
+  right: 0;
+  display: block;
+
+  margin-right: 4.166%;
+}
+
+.navigation--fixed-hat .navigation__btn {
+  margin: 0;
+}
+
+.navigation--fixed-hat .navigation__list {
+  top: 2px;
+  right: -2px;
+  z-index: 2;
+}
+
+.phone-block--fixed-hat {
+  display: block;
+  padding-bottom: 0;
 }
