--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,8 @@ body {
 }
 
 h1 {
+  margin: 0;
+
   color: #f48647;
 
   font-family: "Lato Medium", "Arial", sans-serif;
@@ -220,7 +222,7 @@ a {
 }
 
 .container--header {
-  min-height: 637px;
+  height: 700px;
 
   overflow: auto;
 
@@ -434,7 +436,7 @@ a {
 }
 
 .page-title {
-  margin-bottom: 181px;
+  margin-bottom: 180px;
   padding-left: 147px;
 }
 
@@ -457,7 +459,7 @@ a {
   width: 522px;
   height: 44px;
   margin: 0 auto;
-  padding-bottom: 160px;
+  margin-bottom: 50px;
 
   text-align: center;
 
@@ -547,18 +549,17 @@ main {
   position: relative;
 }
 
-label[for="second-screen"] {
-  position: absolute;
+.arrow {
+  position: relative;
   z-index: 1;
-  bottom: -66px;
-  left: 50%;
 
+  display: block;
   width: 50px;
   height: 15px;
+  margin: 0 auto;
+  margin-bottom: 50px;
 
   cursor: pointer;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
 
   background-image: url("../img/icon__header--arrow.svg");
   background-repeat: no-repeat;
@@ -1300,5 +1301,5 @@ label[for="second-screen"] {
 
 .phone-block--fixed-hat {
   display: block;
-  padding-bottom: 0;
+  margin-bottom: 0;
 }
