--- a/css/style.css
+++ b/css/style.css
@@ -1262,6 +1262,8 @@ main {
 
   padding: 15px 0;
   margin: 0 auto;
+
+  font-size: 0;
 }
 
 .first-screen--fixed-hat > * {
@@ -1270,6 +1272,7 @@ main {
 
 .logo--fixed-hat {
   display: block;
+
   width: 95px;
   height: 50px;
 
@@ -1282,11 +1285,13 @@ main {
 }
 
 .navigation--fixed-hat {
-  position: absolute;
-  right: 0;
   display: block;
 
+  width: auto;
+
   margin-right: 4.166%;
+  margin-bottom: 0;
+  margin-top: 4px;
 }
 
 .navigation--fixed-hat .navigation__btn {
@@ -1301,5 +1306,8 @@ main {
 
 .phone-block--fixed-hat {
   display: block;
+
+  margin: 0 auto;
   margin-bottom: 0;
+  margin-top: 3px;
 }
