--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,8 @@ body {
 
   min-width: 900px;
 
+  overflow-x: hidden;
+
   color: #ffffff;
   background-color: #171c2a;
   background-image: url("../img/bg__header--gradient.jpg");
@@ -215,9 +217,9 @@ a {
 }
 
 .page-header {
-  /*background-color: #171c2a;*/
-  /*background-image: linear-gradient(to right, #171d2a, #4d5461);*/
-  background-image: url("../img/bg__header--gradient.svg");
+  position: relative;
+  z-index: 2;
+  background-image: url("../img/bg__header--gradient.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
@@ -384,56 +386,12 @@ a {
   background-color: #f9f9f9;
 }
 
-.navigation__item:hover > .navigation__link::before,
-.navigation__link--modal-window::before {
+.navigation__item:hover > .navigation__link::before {
   background-color: #f4c547;
 }
 
-.navigation__item:hover > .navigation__link,
-.navigation__link--modal-window {
+.navigation__item:hover > .navigation__link {
   color: #1a2232;
-}
-
-.navigation__modal-window {
-  position: absolute;
-  top: 58px;
-  right: 0;
-
-  display: none;
-}
-
-.navigation__item:hover > .navigation__modal-window,
-.navigation__modal-window:hover {
-  display: block;
-}
-
-.navigation__list--modal-window {
-  position: static;
-
-  display: block;
-
-  min-width: 600px;
-  margin-right: 19px;
-}
-
-.navigation__link--modal-window {
-  min-width: 130px;
-}
-
-.navigation__item--modal-window:last-child::after {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  right: 0;
-
-  width: 2px;
-  height: 38px;
-
-  content: "";
-  -webkit-transform: rotate(20deg);
-          transform: rotate(20deg);
-
-  background-color: #f9f9f9;
 }
 
 .page-title {
@@ -747,6 +705,8 @@ main {
 }
 
 .content--my-experience {
+  z-index: 2;
+
   padding-top: 27px;
 
   background-color: #d0d3d9;
@@ -861,6 +821,8 @@ main {
 }
 
 .content--how-i-work {
+  z-index: 2;
+
   min-height: 700px;
 
   background-color: #f9f9f9;
@@ -898,7 +860,7 @@ main {
   padding-left: 0;
 }
 
-.container__inner-wrapper--portfolio::before {
+/*.container__inner-wrapper--portfolio::before {
   position: absolute;
   right: 0;
   bottom: -50px;
@@ -910,9 +872,23 @@ main {
 
   border-bottom: 960px solid #1a2232;
   border-left: 390px solid transparent;
+}*/
+
+.bg-line {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #1a2232;
 }
 
 .content--clients {
+  z-index: 2;
+
   padding-bottom: 39px;
 
   background-color: #f9f9f9;
@@ -924,7 +900,7 @@ main {
 
 .gallery {
   position: relative;
-  z-index: 1;
+  z-index: 2;
 
   overflow: auto;
 
@@ -1171,7 +1147,7 @@ main {
 
 .scroll {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   right: 4.166%;
   bottom: 0;
   left: 4.166%;
@@ -1236,101 +1212,94 @@ main {
 }
 
 .page-footer {
-  overflow: hidden;
-
-  background-color: #1a2232;
+  background-color: #f48647;
 }
 
 .container--footer {
-  padding-top: 35px;
-  padding-bottom: 17px;
+  padding: 25px 0;
 }
 
-.contacts {
-  padding-top: 25px;
+.contacts__btn--link {
+  display: block;
+  box-sizing: border-box;
+  width: 300px;
+  height: 36px;
+  padding: 3px 0;
+  border: 2px solid #1a2232;
+
+  text-align: center;
+
+  color: #1a2232;
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
 }
 
-.contacts__title {
+.contacts__text {
+  margin-bottom: 5px;
+
+  color: #1a2232;
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-weight: 400;;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.contacts__text--social {
+  margin-bottom: 15px;
+}
+
+.contacts__text--title {
   margin-bottom: 20px;
 
-  color: #f9f9f9;
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-size: 22px;
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.contacts__key {
+  font-family: "Lato Light", "Arial", sans-serif;
+  font-weight: 300;
+}
+
+.contacts__key--phone {
+  margin-right: 35px;
+}
+
+.contacts__key--e-mail {
+  margin-right: 59px;
+}
+
+.contacts__key--social {
+  margin-right: 35px;
+}
+
+.contacts__link {
+  color: #1a2232;
 
   font-family: "Lato Regular", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
+  line-height: 24px;
 }
 
-.contacts__phone {
-  margin-bottom: 6px;
-
-  color: #f9f9f9;
-
-  font-family: "Lato Light", "Arial", sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 18px;
+.contacts__link--social {
+  text-decoration: underline;
 }
 
-.contacts__email {
-  color: #f9f9f9;
-
-  font-family: "Lato Light", "Arial", sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 18px;
+.contacts__form {
+  display: none;
 }
 
-.contacts__link {
-  color: #f9f9f9;
-
-  font-family: "Lato Regular", "Arial", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-}
-
-.contacts__phone .contacts__link {
-  margin-left: 35px;
-}
-
-.contacts__email .contacts__link {
-  margin-left: 61px;
-
-  font-size: 16px;
+.contacts__form--show {
+  display: block;
 }
 
 .partners {
   position: relative;
-}
-
-.partners::before {
-  position: absolute;
-  top: -44px;
-  left: 73px;
-
-  width: 3px;
-  height: 209px;
-
-  content: "";
-  -webkit-transform: rotate(22deg);
-          transform: rotate(22deg);
-
-  background-color: #b7b9be;
-}
-
-.partners::after {
-  position: absolute;
-  top: -44px;
-  right: 59px;
-
-  width: 3px;
-  height: 209px;
-
-  content: "";
-  -webkit-transform: rotate(22deg);
-          transform: rotate(22deg);
-
-  background-color: #b7b9be;
+  z-index: 2;
 }
 
 .partners__logo {
@@ -1349,6 +1318,11 @@ main {
   font-size: 18px;
   font-weight: 300;
   line-height: 24px;
+}
+
+.copyright {
+  position: relative;
+  z-index: 2;
 }
 
 .copyright__text {
