--- a/css/style.css
+++ b/css/style.css
@@ -442,8 +442,12 @@ a {
   height: 44px;
   margin-right: 3px;
   padding: 0 25px;
+  border: 2px solid #f4c547;
 
   vertical-align: top;
+
+  -webkit-transform: skew(-24deg);
+          transform: skew(-24deg);
 
   color: #f9f9f9;
 
@@ -451,25 +455,6 @@ a {
   font-size: 20px;
   font-weight: 400;
   line-height: 41px;
-}
-
-.phone-block__phone::before {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-
-  display: block;
-
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-
-  content: "";
-  -webkit-transform: skew(-24deg);
-          transform: skew(-24deg);
-
-  border: 2px solid #f4c547;
 }
 
 .phone-block__btn {
@@ -483,6 +468,11 @@ a {
   height: 44px;
   padding: 0 25px;
 
+  -webkit-transform: skew(-24deg);
+          transform: skew(-24deg);
+
+  background-color: #f4c547;
+
   color: #1a2232;
 
   font-family: "Lato Regular", "Arial", sans-serif;
@@ -491,26 +481,16 @@ a {
   line-height: 41px;
 }
 
-.phone-block__btn::before {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-
-  display: block;
-
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-
-  content: "";
-  -webkit-transform: skew(-24deg);
-          transform: skew(-24deg);
-
-  background-color: #f4c547;
+.phone-block__text {
+  -webkit-transform: skew(24deg);
+          transform: skew(24deg);
 }
 
-.phone-block__btn--ready::before {
+.phone-block__text--done {
+  font-family: "Arial", sans-serif;
+}
+
+.phone-block__btn--ready {
   background-color: #86cf4f;
 }
 
@@ -527,8 +507,6 @@ a {
   height: 100%;
 
   content: "";
-  -webkit-transform: skew(-24deg);
-          transform: skew(-24deg);
 
   background-color: rgba(244, 49, 17, 0.2);
 }
@@ -544,7 +522,7 @@ a {
 }
 
 .phone-block__btn--form {
-  background-color: transparent;
+  margin-right: 2px;
   border: none;
   cursor: pointer;
 }
@@ -562,38 +540,40 @@ a {
 
   display: inline-block;
   vertical-align: top;
+  box-sizing: border-box;
   height: 44px;
   margin-right: 2px;
-}
+  border: 2px solid #f4c547;
 
-.phone-block__label::before {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-
-  display: block;
-
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-
-  content: "";
   -webkit-transform: skew(-24deg);
           transform: skew(-24deg);
-
-  border: 2px solid #f4c547;
 }
 
-.phone-block__label--invalid::before {
+.phone-block__label--invalid {
   background-color: rgba(244, 49, 17, 0.2);
 }
 
-.phone-block__input {
-  padding: 7px 0;
+.phone-block__label--sending {
+  margin-right: -1px;
+  border: none;
 
+  background-color: #f4c547;
+}
+
+.phone-block__label--name.phone-block__label--sending {
+  width: 20%;
+}
+
+.phone-block__label--phone.phone-block__label--sending {
+  margin-right: 2px;
+}
+
+.phone-block__input {
   background-color: transparent;
   border: none;
+
+  -webkit-transform: skew(24deg);
+          transform: skew(24deg);
 
   text-align: center;
 
@@ -601,7 +581,7 @@ a {
   font-family: "Lato Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 20px;
-  line-height: 28px;
+  line-height: 40px;
 }
 
 .phone-block__input:focus {
@@ -610,6 +590,10 @@ a {
 
 .phone-block__btn--form {
   outline: none;
+}
+
+.phone-block__btn--sending {
+  cursor: auto;
 }
 
 .phone-block__input::-webkit-input-placeholder {
@@ -638,6 +622,25 @@ a {
   font-weight: 200;
   font-size: 18px;
   line-height: 24px;
+}
+
+.phone-block__input--name:disabled {
+  box-sizing: border-box;
+  width: 80%;
+
+  color: #1a2232;
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 44px;
+}
+
+.phone-block__input--phone:disabled {
+  color: #1a2232;
+  font-family: "Lato Bold", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 44px;
 }
 
 main {
@@ -1136,6 +1139,27 @@ main {
   display: block;
 }
 
+.cross--phone-block {
+  position: static;
+
+  display: inline-block;
+  vertical-align: top;
+  width: 57px;
+  height: 44px;
+  background-color: #f48a31;
+  transform: skew(-24deg);
+
+  color: #1a2232;
+}
+
+.cross--done {
+  margin-left: -10px;
+  background: transparent url("../img/icon__phone-block--done-symbol.png") no-repeat center;
+  background-size: 100% 100%;
+  transform: skew(0deg);
+  width: 77px;
+}
+
 .cross--portfolio {
   vertical-align: middle;
 }
@@ -1473,7 +1497,7 @@ main {
   position: relative;
 
   min-width: 900px;
-  max-width: 1200px;
+  max-width: 1600px;
 
   padding: 15px 0;
   margin: 0 auto;
