--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
 body {
   position: relative;
 
-  min-width: 900px;
+  min-width: 1000px;
 
   overflow-x: hidden;
 
@@ -207,12 +207,31 @@ a {
 .container {
   position: relative;
 
-  min-width: 900px;
+  min-width: 1000px;
   max-width: 1600px;
   margin: 0 auto;
 }
 
+.container--my-experience {
+  padding-top: 27px;
+}
+
+.content__column--infographics::after {
+    position: absolute;
+    top: -10px;
+    bottom: -11px;
+    right: -33px;
+
+    width: 2px;
+
+    content: "";
+
+    background-color: #000000;
+}
+
 .container__inner-wrapper {
+  position: relative;
+
   box-sizing: border-box;
   width: 100%;
   padding: 0 4.166%;
@@ -282,8 +301,8 @@ a {
   margin-right: 20px;
 
   content: "";
-  -webkit-transform: rotate(20deg);
-          transform: rotate(20deg);
+  -webkit-transform: skew(-24deg);
+          transform: skew(-24deg);
   vertical-align: middle;
 
   background-color: #f9f9f9;
@@ -300,8 +319,8 @@ a {
   margin-left: 20px;
 
   content: "";
-  -webkit-transform: rotate(20deg);
-          transform: rotate(20deg);
+  -webkit-transform: skew(-24deg);
+          transform: skew(-24deg);
   vertical-align: middle;
 
   background-color: #f9f9f9;
@@ -331,9 +350,13 @@ a {
   display: inline-block;
 
   margin-right: 3px;
-  padding-bottom: 20px;
 
   vertical-align: top;
+
+  -webkit-transform: skew(-24deg);
+          transform: skew(-24deg);
+
+  background-color: #f48647;
 }
 
 .navigation__link {
@@ -347,6 +370,9 @@ a {
   min-height: 38px;
   padding: 7px 29px;
 
+  -webkit-transform: skew(24deg);
+          transform: skew(24deg);
+
   text-align: center;
 
   color: #f9f9f9;
@@ -355,25 +381,6 @@ a {
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
-}
-
-.navigation__link::before {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-
-  display: block;
-
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-
-  content: "";
-  -webkit-transform: skew(-20deg);
-          transform: skew(-20deg);
-
-  background-color: #f48647;
 }
 
 .navigation__item:first-child::before {
@@ -386,13 +393,11 @@ a {
   height: 38px;
 
   content: "";
-  -webkit-transform: rotate(20deg);
-          transform: rotate(20deg);
 
   background-color: #f9f9f9;
 }
 
-.navigation__item:hover > .navigation__link::before {
+.navigation__item:hover {
   background-color: #f4c547;
 }
 
@@ -554,13 +559,13 @@ a {
 }
 
 .phone-block__label--sending {
-  margin-right: -1px;
   border: none;
 
   background-color: #f4c547;
 }
 
 .phone-block__label--name.phone-block__label--sending {
+  margin-right: -2px;
   width: 20%;
 }
 
@@ -716,8 +721,6 @@ main {
 .content--my-experience {
   z-index: 3;
 
-  padding-top: 27px;
-
   background-color: #d0d3d9;
 }
 
@@ -773,7 +776,6 @@ main {
   box-sizing: border-box;
   width: 50%;
   padding-top: 0;
-  padding-right: 3%;
   padding-bottom: 0;
   padding-left: 50px;
 }
@@ -790,6 +792,16 @@ main {
   font-size: 24px;
   font-weight: 600;
   line-height: 68px;
+}
+
+.content__column--infographics {
+  position: relative;
+}
+
+.content__text--infographics {
+  float: right;
+  max-width: 470px;
+  padding-right: 30px;
 }
 
 .content__text--channels {
@@ -814,19 +826,6 @@ main {
 
 .content__picture:last-child {
   margin-right: 0;
-}
-
-.content--my-experience::before {
-  position: absolute;
-  top: 110px;
-  left: 52.3%;
-
-  width: 2px;
-  height: 49%;
-
-  content: "";
-
-  background-color: #000000;
 }
 
 .content--how-i-work {
@@ -971,8 +970,8 @@ main {
 
   display: block;
 
-  min-width: 900px;
-  max-width: 1200px;
+  min-width: 1000px;
+  max-width: 1600px;
   margin: 0 auto;
   padding-top: 50px;
 
@@ -1144,20 +1143,16 @@ main {
 
   display: inline-block;
   vertical-align: top;
-  width: 57px;
+  width: 77px;
   height: 44px;
-  background-color: #f48a31;
-  transform: skew(-24deg);
+  margin-left: -10px;
 
-  color: #1a2232;
+  background: transparent url("../img/icon__phone-block--sending-symbol.png") no-repeat center;
+  background-size: 100% 100%;
 }
 
 .cross--done {
-  margin-left: -10px;
   background: transparent url("../img/icon__phone-block--done-symbol.png") no-repeat center;
-  background-size: 100% 100%;
-  transform: skew(0deg);
-  width: 77px;
 }
 
 .cross--portfolio {
@@ -1247,6 +1242,10 @@ main {
 .container--footer {
   padding-top: 20px;
   padding-bottom: 12px;
+}
+
+.contacts__btn {
+  cursor: pointer;
 }
 
 .contacts__btn--link {
@@ -1426,8 +1425,8 @@ main {
 
 .partners__logo {
   width: 150px;
+  margin: 0 auto;
   margin-top: 32px;
-  margin-left: 29px;
 
   text-align: center;
 }
@@ -1496,7 +1495,7 @@ main {
 .first-screen--fixed-hat {
   position: relative;
 
-  min-width: 900px;
+  min-width: 1000px;
   max-width: 1600px;
 
   padding: 15px 0;
